// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-textarea should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _rows=5 _spellCheck=true _value="Value" _accessKey="V" 1`] = `
<kol-textarea _value="Value">
  <template shadowrootmode="open">
    <div class="has-value kol-input kol-textarea textarea" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          Label
          <span aria-hidden="true" class="access-key-hint">
            V
          </span>
        </span>
      </label>
      <div class="input"><textarea accesskey="V" autocapitalize="off" autocorrect="off" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" rows="5" value="Value" style="resize: vertical;"></textarea>
      </div>
    </div>
  </template>
</kol-textarea>
`;

exports[`kol-textarea should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _rows=5 _spellCheck=true _value="Value" _alert=true 1`] = `
<kol-textarea _alert="" _value="Value">
  <template shadowrootmode="open">
    <div class="has-value kol-input kol-textarea textarea" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input"><textarea autocapitalize="off" autocorrect="off" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" rows="5" value="Value" style="resize: vertical;"></textarea>
      </div>
    </div>
  </template>
</kol-textarea>
`;

exports[`kol-textarea should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _rows=5 _spellCheck=true _value="Value" _disabled=true 1`] = `
<kol-textarea _value="Value">
  <template shadowrootmode="open">
    <div class="disabled has-value kol-input kol-textarea textarea" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input"><textarea autocapitalize="off" autocorrect="off" disabled="" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" rows="5" value="Value" style="resize: vertical;"></textarea>
      </div>
    </div>
  </template>
</kol-textarea>
`;

exports[`kol-textarea should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _rows=5 _spellCheck=true _value="Value" _hint="Hint" 1`] = `
<kol-textarea _value="Value">
  <template shadowrootmode="open">
    <div class="has-value kol-input kol-textarea textarea" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <span class="hint" id="id-nonce-hint">
        Hint
      </span>
      <div class="input"><textarea aria-describedby="id-nonce-hint" autocapitalize="off" autocorrect="off" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" rows="5" value="Value" style="resize: vertical;"></textarea>
      </div>
    </div>
  </template>
</kol-textarea>
`;

exports[`kol-textarea should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _rows=5 _spellCheck=true _value="Value" _icons={"left":{"icon":"codicon codicon-arrow-left"},"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-textarea _value="Value">
  <template shadowrootmode="open">
    <div class="has-value kol-input kol-textarea textarea" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input">
        <div class="inputAdornment-start">
          <kol-icon _icons="codicon codicon-codicon codicon-arrow-left" _label=""></kol-icon>
        </div><textarea autocapitalize="off" autocorrect="off" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" rows="5" value="Value" style="resize: vertical;"></textarea>
        <div class="inputAdornment-end">
          <kol-icon _icons="codicon codicon-codicon codicon-arrow-right" _label=""></kol-icon>
        </div>
      </div>
    </div>
  </template>
</kol-textarea>
`;

exports[`kol-textarea should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _rows=5 _spellCheck=true _value="Value" _icons={"left":{"icon":"codicon codicon-arrow-left"}} 1`] = `
<kol-textarea _value="Value">
  <template shadowrootmode="open">
    <div class="has-value kol-input kol-textarea textarea" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input">
        <div class="inputAdornment-start">
          <kol-icon _icons="codicon codicon-codicon codicon-arrow-left" _label=""></kol-icon>
        </div><textarea autocapitalize="off" autocorrect="off" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" rows="5" value="Value" style="resize: vertical;"></textarea>
        <div class="inputAdornment-end"></div>
      </div>
    </div>
  </template>
</kol-textarea>
`;

exports[`kol-textarea should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _rows=5 _spellCheck=true _value="Value" _icons={"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-textarea _value="Value">
  <template shadowrootmode="open">
    <div class="has-value kol-input kol-textarea textarea" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input">
        <div class="inputAdornment-start"></div><textarea autocapitalize="off" autocorrect="off" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" rows="5" value="Value" style="resize: vertical;"></textarea>
        <div class="inputAdornment-end">
          <kol-icon _icons="codicon codicon-codicon codicon-arrow-right" _label=""></kol-icon>
        </div>
      </div>
    </div>
  </template>
</kol-textarea>
`;

exports[`kol-textarea should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _rows=5 _spellCheck=true _value="Value" _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} _hideError=true 1`] = `
<kol-textarea _hide-error="" _value="Value">
  <template shadowrootmode="open">
    <div class="has-value hidden-error kol-input kol-textarea textarea" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input"><textarea aria-describedby="id-nonce-msg" autocapitalize="off" autocorrect="off" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" rows="5" value="Value" style="resize: vertical;"></textarea>
      </div>
    </div>
  </template>
</kol-textarea>
`;

exports[`kol-textarea should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _rows=5 _spellCheck=true _value="Value" _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} 1`] = `
<kol-textarea _value="Value">
  <template shadowrootmode="open">
    <div class="has-value kol-input kol-textarea textarea" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input"><textarea aria-describedby="id-nonce-msg" autocapitalize="off" autocorrect="off" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" rows="5" value="Value" style="resize: vertical;"></textarea>
      </div>
    </div>
  </template>
</kol-textarea>
`;

exports[`kol-textarea should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _rows=5 _spellCheck=true _value="Value" _readOnly=true 1`] = `
<kol-textarea _value="Value">
  <template shadowrootmode="open">
    <div class="has-value kol-input kol-textarea read-only textarea" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input"><textarea autocapitalize="off" autocorrect="off" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" readonly="" rows="5" value="Value" style="resize: vertical;"></textarea>
      </div>
    </div>
  </template>
</kol-textarea>
`;

exports[`kol-textarea should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _rows=5 _spellCheck=true _value="Value" _shortKey="S" 1`] = `
<kol-textarea _value="Value">
  <template shadowrootmode="open">
    <div class="has-value kol-input kol-textarea textarea" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          Label
          <span aria-hidden="true" class="access-key-hint">
            S
          </span>
        </span>
      </label>
      <div class="input"><textarea autocapitalize="off" autocorrect="off" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" rows="5" value="Value" style="resize: vertical;"></textarea>
      </div>
    </div>
  </template>
</kol-textarea>
`;

exports[`kol-textarea should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _rows=5 _spellCheck=true _value="Value" _touched=true 1`] = `
<kol-textarea _touched="" _value="Value">
  <template shadowrootmode="open">
    <div class="has-value kol-input kol-textarea textarea touched" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input"><textarea autocapitalize="off" autocorrect="off" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" rows="5" value="Value" style="resize: vertical;"></textarea>
      </div>
    </div>
  </template>
</kol-textarea>
`;

exports[`kol-textarea should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _rows=5 _spellCheck=true _value="Value" 1`] = `
<kol-textarea _value="Value">
  <template shadowrootmode="open">
    <div class="has-value kol-input kol-textarea textarea" role="presentation">
      <label class="input-label" htmlfor="id-nonce" id="id-nonce-label">
        <span class="input-label-span">
          <span>
            Label
          </span>
        </span>
      </label>
      <div class="input"><textarea autocapitalize="off" autocorrect="off" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" rows="5" value="Value" style="resize: vertical;"></textarea>
      </div>
    </div>
  </template>
</kol-textarea>
`;
